--- a/tracer/renderer/index.html
+++ b/tracer/renderer/index.html
@@ -53,6 +53,7 @@
         <!-- Button -->
         <div class="mt-6">
           <button
+            id="tbl-print"
             type="submit"
             class="w-80 m-auto flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-teal-500 hover:bg-teal-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
           >
